tests/security/taintedInputFromParam/output.txt
ERROR: TaintedData - input.hack:18:22 - Data from a URL query string found its way to a SQL query using path $_GET --array-fetch--> $_GET['user_id'] (input.hack:3:29) ----> $user_id (input.hack:3:9) ----> return (input.hack:4:16) ----> A::getUserId() (input.hack:2:35) ----> composition (input.hack:8:21) ----> $appended (input.hack:8:9) ----> return (input.hack:9:16) ----> A::getAppendedUserId() (input.hack:7:43) ----> $userId (input.hack:13:9) ----> call to A::deleteUser (input.hack:14:34) ----> A::deleteUser#2 (input.hack:17:67) ----> $userId (input.hack:17:67) ----> composition (input.hack:18:22) ----> call to AsyncMysqlConnection::query (input.hack:18:22) ----> AsyncMysqlConnection::query#1 (hi_embedded_stdlib/builtins_async_mysql.hhi:181:14)